--- a/pages/index.css
+++ b/pages/index.css
@@ -27,23 +27,28 @@
 
 .nav-menu {
     margin-top: 0.6%;
-    margin-bottom: 0.6%;
-    margin-left: 30%;
+    font-size: 30px;
+    /*relative we need to centralize by this*/
     position: relative;
-    width: 40%;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 25%;
+    color: white;
+    width: 50%;
 }
 
-h3 {
+h4 {
     float: left;
     margin-left: 8%;
-    color: whitesmoke;
+    font-size: 30px;
+    color: white;
 }
 
-.h3:hover {
+.h4:hover {
     text-decoration: overline solid;
+    color: white;
     /* border-top-style: solid;
     border-bottom-width: 1px; */
-    color: whitesmoke;
 }
 
 .explore {
@@ -51,8 +56,8 @@ h3 {
     background-size: cover;
     position: absolute;
     width: 100%;
-    font-size: larger;
-    height: 100%;
+    font-size: large;
+    height: 90%;
     color: white;
 }
 
@@ -60,7 +65,7 @@ h3 {
     width: fit-content;
     height: fit-content;
     margin: 10%;
-    margin-left: 38%;
+    margin-left: 39%;
     text-align: center;
 }
 
@@ -73,8 +78,9 @@ p {
 
 .b1 {
     transition: all 0.5s ease;
-    color: #fff;
-    border: 1px solid white;
+    width: 40%;
+    color: #2596be;
+    border: 1px solid #2596be;
     font-family: "Montserrat", sans-serif;
     /* text-transform: uppercase; */
     text-align: center;
@@ -100,29 +106,43 @@ p {
     line-height: 1;
     border-radius: 90px;
     background-color: white;
-    border: 2px solid blue;
+    border: 2px solid transparent;
     margin-left: 10%;
 }
 
 .explore-nav {
-    position: absolute;
-    height: 58%;
+    height: 65%;
     position: inherit;
     width: 16%;
-    margin: 2%;
-    margin-left: 5%;
+    margin: 1.4%;
+    margin-left: 4.5%;
     display: flex;
+    /* background-color: #001f3f; */
+    color: #2596be;
     /* justify-content: center; */
     /* align-items: center; */
 }
 
-.person {
+.person-img {
     position: inherit;
-    height: 80%;
-    width: 100%;
-    border: 1.5px solid #2596be;
-    border-radius: 50% 50% 50% 50%;
-    /* border-spacing: 19%; */
+    height: 100%;
+    background-color: transparent;
+    width: 35%;
+    border: 2px solid #2596be;
+    border-radius: 50%;
+    /* color: #2596be; */
+    /* bottom: 5%; */
+    /* background-color: gold; */
+}
+
+#person {
+    position: inherit;
+    height: 35%;
+    color: #2596be;
+    width: 30%;
+    margin: 31.5%;
+    margin-top: 25%;
+    font-size: 30px;
 }
 
 .text1 {
@@ -130,17 +150,19 @@ p {
     width: fit-content;
     float: left;
     margin-left: 85px;
-    top: 67%;
+    top: 73.5%;
     position: absolute;
+    /* background-color: blue; */
     opacity: 0.5;
 }
 
 .text2 {
+    /* background-color: blue; */
     height: fit-content;
     position: absolute;
     float: left;
     width: fit-content;
-    top: 70.5%;
+    top: 77.5%;
     margin-left: 88px;
     font-weight: bold;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -148,22 +170,35 @@ p {
 
 .explore-nav1 {
     /* position: inherit; */
-    height: 58%;
+    height: 65%;
     position: relative;
     width: 16%;
     margin: 2%;
-    margin-left: 25%;
-    bottom: 80%;
+    margin-left: 30%;
+    /* background-color: #001f3f; */
+    bottom: 89%;
     display: flex;
 }
 
-.world {
+.world-img {
     position: inherit;
-    height: 80%;
-    width: 90%;
-    border: 1.5px solid #2596be;
-    border-radius: 55% 55% 55% 55%;
-    bottom: auto;
+    height: 100%;
+    width: 35%;
+    border: 2px solid #2596be;
+    border-radius: 50%;
+    /* bottom: 5%; */
+    /* background-color: gold; */
+}
+
+#world {
+    position: inherit;
+    height: 30%;
+    font-size: 25px;
+    color: #2596be;
+    width: 30%;
+    margin: 25%;
+    margin-top: 23%;
+    font-size: 30px;
 }
 
 .text3 {
@@ -171,7 +206,7 @@ p {
     width: fit-content;
     float: left;
     margin-left: 85px;
-    top: 9.5%;
+    top: 15%;
     position: absolute;
     opacity: 0.5;
 }
@@ -181,20 +216,20 @@ p {
     position: absolute;
     float: left;
     width: fit-content;
-    top: 47%;
+    top: 55.5%;
     margin-left: 88px;
     font-weight: bold;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .explore-nav2 {
-    height: 58%;
+    height: 65%;
     position: relative;
     width: 16%;
     /* background-color: #001f3f; */
     margin: 2%;
-    margin-left: 45%;
-    bottom: 159%;
+    margin-left: 55%;
+    bottom: 179%;
     display: flex;
 }
 
@@ -223,7 +258,7 @@ p {
     width: fit-content;
     float: left;
     margin-left: 85px;
-    top: 9.5%;
+    top: 15%;
     position: absolute;
     opacity: 0.5;
 }
@@ -234,7 +269,7 @@ p {
     float: left;
     width: fit-content;
     /* background-attachment: fixed; */
-    top: 47%;
+    top: 55%;
     margin-left: 88px;
     font-weight: bold;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -244,10 +279,10 @@ p {
     height: 50%;
     position: relative;
     width: 13%;
-    margin: 2.5%;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: 83%;
-    text-align: center;
-    bottom: 238%;
+    bottom: 260%;
     display: flex;
     /* background-color: #001f3f; */
 }
@@ -256,7 +291,6 @@ p {
     height: fit-content;
     position: absolute;
     width: 100%;
-    top: 3%;
     transition: all 0.5s ease;
     color: #fff;
     border: 1px solid white;
@@ -275,4 +309,50 @@ p {
     color: #2596be;
     background-color: white;
     border: 2px solid black;
+}
+
+.person-img:hover {
+    border: 2px solid #2596be;
+    background-color: skyblue;
+}
+
+.world-img:hover {
+    border: 2px solid #2596be;
+    background-color: skyblue;
+}
+
+.home-img:hover {
+    border: 2px solid #2596be;
+    background-color: skyblue;
+}
+
+.explore-line {
+    width: 69.9%;
+    height: 2%;
+    /* background-color: tomato; */
+    text-align: center;
+    margin: 2.5% 17%;
+}
+
+.b {
+    /* margin: 2%; */
+    width: 100%;
+    margin-right: 3%;
+    text-decoration: line-through;
+    color: white;
+    /* background-color: black; */
+}
+
+.explore-text {
+    /* background-color: red; */
+    width: 100%;
+    margin-left: 4%;
+    float: left;
+}
+
+.number {
+    float: left;
+    margin-left: 9%;
+    margin-right: 13.5%;
+    /* background-color: skyblue; */
 }
