--- a/pages/index.css
+++ b/pages/index.css
@@ -361,8 +361,9 @@ p {
     width: max-content;
     position: sticky;
     color: white;
-    margin-top: 46%;
+    /* margin-top: 10%; */
     width: 100%;
+    opacity: 0.7;
     height: 10%;
     text-align: center;
     background-color: #2596be;
@@ -374,4 +375,77 @@ p {
 .footer1 {
     font-size: medium;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.b3 {
+    height: fit-content;
+    position: relative;
+    width: 100%;
+    transition: all 0.5s ease;
+    color: #fff;
+    border: 1px solid white;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    line-height: 1;
+    font-size: 15px;
+    background-color: #2596be;
+    padding: 12px;
+    outline: none;
+    border-radius: 44px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.b3:hover {
+    color: #2596be;
+    background-color: white;
+    border: 2px solid black;
+}
+
+.book-now {
+    background-image: url(man1.jpg);
+    opacity: 0.7;
+    background-color: #2596be;
+    background-size: cover;
+    background-position: 45%;
+    /* background-color: #001f3f; */
+    height: 30%;
+    width: 100%;
+    position: sticky;
+    margin-top: 46%;
+}
+
+.book-image {
+    background-color: #2596be;
+    opacity: 0.8;
+    height: 100%;
+    width: 100%;
+}
+
+.book-text {
+    color: white;
+    /* background-color: aqua; */
+    font-weight: bold;
+    position: absolute;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    height: fit-content;
+    width: fit-content;
+    margin-top: 4.3%;
+    margin-left: 6%;
+    /* margin-bottom: auto; */
+    /* margin-bottom: ; */
+}
+
+.book-button {
+    height: 100%;
+    width: 10%;
+    /* background-color: black; */
+    padding-top: 6.8%;
+    margin-bottom: auto;
+    margin-left: 84%;
+}
+
+h3 {
+    margin-top: auto;
+    font-size: large;
 }
