--- a/pages/index.css
+++ b/pages/index.css
@@ -449,3 +449,48 @@ h3 {
     margin-top: auto;
     font-size: large;
 }
+
+.center {
+    /* top: 100%; */
+    margin-top: 4%;
+    position: static;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    margin-top: 46%;
+}
+
+.center-text {
+    margin-top: 5%;
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    background-color: green;
+}
+
+.center-grid {
+    position: absolute;
+    margin-top: 17%;
+    margin-left: 5%;
+    width: 60%;
+    height: 130%;
+    background-color: gold;
+}
+
+.grid-scroll {
+    width: 30%;
+    height: 7%;
+    position: absolute;
+    bottom: 0px;
+    left: 35%;
+    /* right: 50%; */
+    background-color: #001f3f;
+}
+
+
+/* .center-map {
+    position: absolute;
+    width: 100%;
+    height: 10%;
+    background-color: gray;
+} */
