--- a/pages/index.css
+++ b/pages/index.css
@@ -383,14 +383,14 @@ p {
     width: 100%;
     transition: all 0.5s ease;
     color: #fff;
+    background-color: #2596be;
+    outline: none;
     border: 1px solid white;
+    line-height: 1;
     font-family: "Montserrat", sans-serif;
     text-align: center;
-    line-height: 1;
     font-size: 15px;
-    background-color: #2596be;
     padding: 12px;
-    outline: none;
     border-radius: 44px;
     margin-left: auto;
     margin-right: auto;
@@ -465,12 +465,22 @@ h3 {
     position: absolute;
     width: 100%;
     height: 15%;
-    background-color: green;
+    /* background-color: green; */
 }
 
 .text-h1 {
     position: absolute;
-    background-color: aqua;
+    /* background-color: aqua; */
+    margin-top: 0;
+    left: 5%;
+}
+
+.text-p {
+    position: absolute;
+    bottom: 0;
+    left: 5%;
+    opacity: 0.5;
+    /* background-color: deeppink; */
 }
 
 .center-grid {
@@ -478,59 +488,132 @@ h3 {
     margin-top: 17%;
     margin-left: 5%;
     width: 60%;
-    height: 130%;
-    background-color: gold;
+    height: 145%;
+    /* background-color: gold; */
 }
 
 .grid-scroll {
     width: 30%;
-    height: 7%;
+    height: 4.5%;
     position: absolute;
     bottom: 0px;
-    left: 35%;
+    left: 38%;
     /* right: 50%; */
-    background-color: #001f3f;
+    color: #2596be;
+    /* background-color: #4b6c8d; */
+    font-size: xx-large;
+}
+
+.scroll-1 {
+    position: absolute;
+    height: 100%;
+    /* background-color: transparent; */
+    width: 20%;
+    border-radius: 35px;
+    /* background-color: gold; */
+    top: 0;
+    left: 16%;
+    text-align: center;
+    font-size: 29px;
+    transition: all 0.5s ease;
+    color: #2596be;
+    background-color: white;
+    outline: none;
+    border: 1px solid #2596be;
+}
+
+.scroll-1:hover {
+    color: white;
+    background-color: #2596be;
+    border: 2px solid #2596be;
+}
+
+.scroll-2:hover {
+    color: white;
+    background-color: #2596be;
+    border: 2px solid #2596be;
+}
+
+.scroll-3:hover {
+    color: white;
+    background-color: #2596be;
+    border: 2px solid #2596be;
+}
+
+.scroll-2 {
+    position: absolute;
+    height: 100%;
+    /* background-color: transparent; */
+    width: 20%;
+    border: 2px solid black;
+    border-radius: 35px;
+    background-color: gold;
+    text-align: center;
+    top: 0;
+    left: 40%;
+    font-size: 29px;
+    transition: all 0.5s ease;
+    color: #2596be;
+    background-color: white;
+    outline: none;
+    border: 1px solid #2596be;
+}
+
+.scroll-3 {
+    position: absolute;
+    height: 100%;
+    /* background-color: transparent; */
+    left: 64%;
+    text-align: center;
+    width: 20%;
+    border: 2px solid black;
+    border-radius: 35px;
+    background-color: gold;
+    top: 0;
+    font-size: 29px;
+    transition: all 0.5s ease;
+    color: #2596be;
+    background-color: white;
+    outline: none;
+    border: 1px solid #2596be;
 }
 
 .grid-box1 {
     width: 100%;
-    height: 30%;
+    height: 29%;
     position: absolute;
-    /* bottom: 0px; */
-    /* left: 35%; */
-    /* right: 50%; */
-    background-color: aqua;
+    /* background-color: aqua; */
+}
+
+.grid-box2 {
+    width: 100%;
+    height: 29%;
+    position: absolute;
+    top: 32%;
+    /* background-color: forestgreen; */
+}
+
+.grid-box3 {
+    width: 100%;
+    height: 29%;
+    position: absolute;
+    top: 64%;
+    /* background-color: gray; */
 }
 
 .grid-image {
     width: 35%;
     height: 100%;
     position: absolute;
-    background-color: brown;
+    /* background-color: brown; */
 }
 
 .grid-button {
-    width: 15%;
-    height: 20%;
+    width: 18%;
+    height: 18%;
     right: 0;
     position: absolute;
-    background-color: black;
-}
-
-.grid-box2 {
-    width: 100%;
-    height: 30%;
-    position: absolute;
-    top: 30%;
-    background-color: forestgreen;
-}
-
-.grid-box3 {
-    width: 100%;
-    height: 30%;
-    position: absolute;
-    top: 60%;
-    background-color: gray;
+    /* background-color: black; */
 }
 
 .center-map {
@@ -540,5 +623,55 @@ h3 {
     top: 133.5%;
     left: 70%;
     border-radius: 20px;
-    background-color: cornflowerblue;
+}
+
+.grid-country {
+    width: 21%;
+    height: 30%;
+    position: absolute;
+    left: 38%;
+    /* background-color: crimson; */
+}
+
+.country-name {
+    position: absolute;
+    font-size: 25px;
+    top: 0;
+}
+
+.country-text {
+    position: absolute;
+    font-size: large;
+    opacity: 0.5;
+    top: 40%;
+}
+
+.grid-text {
+    width: 62%;
+    position: absolute;
+    height: 20%;
+    right: 0;
+    top: 30%;
+    opacity: 0.5;
+    /* background-color: darkgreen; */
+    font-size: 15px;
+}
+
+.grid-icon {
+    width: 62%;
+    position: absolute;
+    height: 7.5%;
+    opacity: 0.5;
+    right: 0;
+    top: 60%;
+}
+
+.grid-direction {
+    width: 20%;
+    position: absolute;
+    height: 10%;
+    left: 38%;
+    /* right: 0; */
+    top: 80%;
+    opacity: 0.6;
 }
